LH-2782 send permissions with each client to show/hide view licenses option (#3201)
